--- a/istio/ingress.yaml
+++ b/istio/ingress.yaml
@@ -41,3 +41,9 @@ spec:
       - backend:
           serviceName: servicegraph
           servicePort: 8088
+  - host: zipkin-istio.k8s.kuops.com
+    http:
+      paths:
+      - backend:
+          serviceName: zipkin
+          servicePort: 9411
