--- a/nginx-ingress/servicemonitor.yaml
+++ b/nginx-ingress/servicemonitor.yaml
@@ -1,36 +1,36 @@
 ---
 # rbac role
-- apiVersion: rbac.authorization.k8s.io/v1
-  kind: Role
-  metadata:
-    name: ingress-prometheus
-    namespace: ingress-nginx
-  rules:
-  - apiGroups:
-    - ""
-    resources:
-    - services
-    - endpoints
-    - pods
-    verbs:
-    - get
-    - list
-    - watch
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: ingress-prometheus
+  namespace: ingress-nginx
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - services
+  - endpoints
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
 ---
 # rbac rolebinding
-- apiVersion: rbac.authorization.k8s.io/v1
-  kind: RoleBinding
-  metadata:
-    name: ingress-prometheus
-    namespace: ingress-nginx
-  roleRef:
-    apiGroup: rbac.authorization.k8s.io
-    kind: Role
-    name: ingress-prometheus
-  subjects:
-  - kind: ServiceAccount
-    name: prometheus-k8s
-    namespace: monitoring
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: ingress-prometheus
+  namespace: ingress-nginx
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: ingress-prometheus
+subjects:
+- kind: ServiceAccount
+  name: prometheus-k8s
+  namespace: monitoring
 ---
 # servicemonitor
 apiVersion: monitoring.coreos.com/v1
