--- a/storage-class/nfs/nfs.yaml
+++ b/storage-class/nfs/nfs.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: nfs-provisioner
+  namespace: kube-system
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -37,7 +38,7 @@ subjects:
   - kind: ServiceAccount
     name: nfs-provisioner
      # replace with namespace where provisioner is deployed
-    namespace: default
+    namespace: kube-system
 roleRef:
   kind: ClusterRole
   name: nfs-provisioner-runner
@@ -60,7 +61,7 @@ subjects:
   - kind: ServiceAccount
     name: nfs-provisioner
     # replace with namespace where provisioner is deployed
-    namespace: default
+    namespace: kube-system
 roleRef:
   kind: Role
   name: leader-locking-nfs-provisioner
@@ -73,6 +74,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: nfs-provisioner
+  namespace: kube-system
   labels:
     app: nfs-provisioner
 spec:
@@ -93,6 +95,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: nfs-provisioner
+  namespace: kube-system
 spec:
   selector:
     matchLabels:
